<resources>
    <string name="app_name">Volley Cecina</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>



    <string name="menu_notizie">Notizie</string>
    <string name="menu_maschile">Settore maschile</string>
    <string name="menu_femminile">Settore femminile</string>
    <string name="menu_contatti">Contatti</string>

    <string name="coach">"Coach"</string>
    <string name="autore">"Autore: "</string>
    <string name="approvazione_dominio">Si vorrebbero aprire i link https://volleycecina.it con questa applicazione piuttosto che con il browser. \nProcedendo verrai indirizzato nelle impostazioni per concedere l\'approvazione del dominio. \nProcedere?</string>
    <string name="dontshowagain">Non mostrare più</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="approvazione_dominio_settings_title">Aggiungi link supportati da questa app</string>
    <string name="dontshowagain_settings_title">Non approvare il dominio all\'avvio</string>
    <string name="dontshowagain_settings_desc">Selezionare per non mostrare all\'avvio</string>
    <string name="share_using">Condividi tramite:</string>
    <string name="share_news_presentation_text">Leggi questa notizia da VolleyCecina.it</string>
    <string name="domainverification_title">Approvazione dominio</string>
    <string name="not_supported">non supportato</string>

    <string name="roster">Roster</string>
    <string name="staff">Staff</string>
    <string name="coach_title">"Coach: "</string>
    <string name="role_title">"Ruolo: "</string>
    <string name="nation">"Nazione: "</string>
    <string name="year">"Anno: "</string>
    <string name="height">"Altezza: "</string>

    <!-- usata in xml/my_preferences.xml deve essere uguale a Constants.dontaskfordomainverification_key -->
    <string name="dontaskfordomainverification_key">dafdv</string>
    <string name="domain_approvation">Approvazione del dominio</string>
    <string name="address_text">Indirizzo</string>
    <string name="phone_text">Telefono</string>
    <string name="email_text">E-mail</string>
    <string name="website_text">Sito web</string>


    <string name="telefono_sede">0586 631698</string>
    <string name="email_fipav">volley.cecina.asd@fipav.li.it</string>
    <string name="indirizzo_sede">Via Fucini 1 – 57023 Cecina (Li)</string>

    <string name="sede_maps_link">https://goo.gl/maps/y1277rtd15XUkFJj8</string>
    <string name="phone_call_link">tel://0586631698</string>
    <string name="mailto_link">mailto:volley.cecina.asd@fipav.li.it</string>
    <string name="website_url">https://volleycecina.it</string>
    <string name="instagram_link">https://www.instagram.com/volleycecina</string>
    <string name="facebook_link">https://www.facebook.com/cecinavolley</string>
    <string name="instagram_text">Instagram</string>
    <string name="instagram_name">Volley Cecina</string>
    <string name="facebook_text">Facebook</string>

    <string name="tap_again_to_maps">Premi ancora sull\'indirizzo per aprire le mappe</string>
    <string name="tap_again_to_phone">Premi ancora sul numero per aprire i contatti</string>
    <string name="tap_again_to_email">Premi ancora sull\'email per inviare una email</string>
    <string name="tap_again_to_website">Premi ancora sul sito web per aprire il browser</string>
    <string name="tap_again_to_instagram">Premi ancora sul nome del profilo per aprire Instagram</string>
    <string name="tap_again_to_facebook">Premi ancora sul nome del profilo per aprire Facebook</string>
    <string name="menu_favoriti">Preferiti</string>
    <string name="night_mode">Night mode</string>

    <string name="menu_avanzate">Funzioni avanzate</string>
    <string name="cronometro">Cronometro</string>
    <string name="cronometro_desc">Utilizza il cronometro</string>
    <string name="allenamento_rincorsa">Tracking del movimento</string>
    <string name="allenamento_rincorsa_desc">Utilizza il dispositivo come tracker</string>
    <string name="rincorsa_tracker_desc">Utilizza il dispositivo come tracker durante l\'esecuzione della rincorsa</string>
    <string name="people">Persone</string>
    <string name="team">Squadre</string>
    <string name="news">Notizie</string>
    <string name="no_favorites">Aggiungi un elemento ai preferiti aprendo la pagina relativa e premendo sul cuore.</string>


</resources>