<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/teams_placeholder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/phone_layout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:src="@drawable/google_maps" />

            <TextView
                android:id="@+id/maintv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/img"
                android:ellipsize="end"
                android:textColor="@color/gray"
                android:maxLength="80"
                android:maxLines="1"
                android:text="@string/indirizzo_sede"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maintv"
                android:layout_toEndOf="@+id/img"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/address_text"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/email_layout"
            app:layout_constraintTop_toBottomOf="@id/address_layout">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_phone_24" />

            <TextView
                android:id="@+id/maintv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/img1"
                android:textColor="@color/gray"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="1"
                android:text="@string/telefono_sede"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maintv1"
                android:layout_toEndOf="@id/img1"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/phone_text"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/website_layout"
            app:layout_constraintTop_toBottomOf="@id/phone_layout">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_email_24" />

            <TextView
                android:id="@+id/maintv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/img2"
                android:textColor="@color/gray"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="1"
                android:text="@string/email_fipav"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maintv2"
                android:layout_toEndOf="@id/img2"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/email_text"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/website_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_desktop_windows_24" />

            <TextView
                android:id="@+id/maintv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/img3"
                android:textColor="@color/gray"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="1"
                android:text="@string/website_url"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maintv3"
                android:layout_toEndOf="@id/img3"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/website_text"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/instagram_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/website_layout">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:src="@drawable/instagram" />

            <TextView
                android:id="@+id/maintv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/img4"
                android:textColor="@color/gray"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="1"
                android:text="@string/instagram_name"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maintv4"
                android:layout_toEndOf="@id/img4"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/instagram_text"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/facebook_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/instagram_layout">

            <ImageView
                android:id="@+id/img5"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha="0.3"
                android:contentDescription="@null"
                android:src="@drawable/facebook" />

            <TextView
                android:id="@+id/maintv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/img5"
                android:textColor="@color/gray"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="1"
                android:text="@string/instagram_name"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maintv5"
                android:layout_toEndOf="@id/img5"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/facebook_text"
                android:textSize="15sp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>