<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/teams_placeholder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/cronometro_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/tracker_layout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_timer_24" />

            <TextView
                android:id="@+id/maintv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/img"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="1"
                android:text="@string/cronometro"
                android:textSize="18sp"
                android:textColor="@color/customDarkLightIconColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maintv"
                android:layout_toEndOf="@id/img"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/cronometro_desc"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tracker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/cronometro_layout">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_sports_handball_24" />

            <TextView
                android:id="@+id/maintv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/img1"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="1"
                android:text="@string/allenamento_rincorsa"
                android:textSize="18sp"
                android:textColor="@color/customDarkLightIconColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maintv1"
                android:layout_toEndOf="@id/img1"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/allenamento_rincorsa_desc"
                android:textSize="15sp" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>